--- a/RemoteController/RemoteController.WinUi/Strings/en-us/Resources.resw
+++ b/RemoteController/RemoteController.WinUi/Strings/en-us/Resources.resw
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -61,23 +61,8 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>RemoteController.WinUi</value>
   </data>
-	<data name="AppDescription" xml:space="preserve">
-		<value>RemoteController.WinUi</value>
-  	</data>
-  <data name="Shell_Generic.Content" xml:space="preserve">
-    <value>Generic</value>
-  </data>
-  <data name="Shell_Folders.Content" xml:space="preserve">
-    <value>Folders</value>
-  </data>
-  <data name="Shell_Commands.Content" xml:space="preserve">
-    <value>Commands</value>
-  </data>
-  <data name="Shell_SoundDevices.Content" xml:space="preserve">
-    <value>SoundDevices</value>
-  </data>
-  <data name="Shell_Hotkeys.Content" xml:space="preserve">
-    <value>Hotkeys</value>
+  <data name="AppDescription" xml:space="preserve">
+    <value>RemoteController.WinUi</value>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
     <value>Personalization</value>
